-- Created       : 2014 Aug 03 (Sun) 09:55:46 by Harold Carr.
-- Last Modified : 2014 Aug 03 (Sun) 10:52:49 by Harold Carr.

name:                data-graphviz-hc-util
version:             0.1.0.0
synopsis:            Utilities for Data.GraphViz
-- description:         
homepage:            http://haroldcarr.com/
license:             MIT
license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.GraphViz.HC.Util
  -- other-modules:       
  other-extensions:    MultiParamTypeClasses, OverloadedStrings
  build-depends:       base >=4.6 && <4.7
                       , fgl >=5.4 && <5.5
                       , filepath >=1.3 && <1.4
                       , graphviz >= 2999.17.0.1
                       , text >=0.11 && <0.12
  hs-source-dirs:      src
  default-language:    Haskell2010

-- End of file.
