-- Created       : 2014 Aug 03 (Sun) 09:55:46 by Harold Carr.
-- Last Modified : 2016 Jul 29 (Fri) 14:44:55 by Harold Carr.

name:                data-graphviz-hc-util
version:             0.1.0.0
synopsis:            Utilities for Data.GraphViz
-- description:         
homepage:            http://haroldcarr.com/
license:             MIT
license-file:        LICENSE
author:              Harold Carr
maintainer:          harold.carr@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.GraphViz.HC.DiagramsTH
                     , Data.GraphViz.HC.Util
  -- other-modules:       
  other-extensions:    MultiParamTypeClasses, OverloadedStrings
  build-depends:       base
                     , fgl
                     , filepath
                     , graphviz
                     , template-haskell
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

-- End of file.
