-- Created       : 2014 Aug 03 (Sun) 09:55:46 by Harold Carr.
-- Last Modified : 2018 Aug 08 (Wed) 07:51:17 by Harold Carr.

name:                  data-graphviz-hc-util
version:               0.1.0.0
synopsis:              Utilities for Data.GraphViz
homepage:              http://haroldcarr.com/
license:               MIT
license-file:          LICENSE
author:                Harold Carr
maintainer:            harold.carr@gmail.com
category:              Data
build-type:            Simple
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GraphViz.HC.DiagramsTH
                     , Data.GraphViz.HC.Util
  build-depends:       base
                     , fgl
                     , filepath
                     , graphviz
                     , template-haskell
                     , text
  ghc-options:         -Wall
  default-language:    Haskell2010

-- End of file.
